--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "npx postcss styles.css -o ./docs/static/tailwindcss/styles.min.css --config ./postcss.config.js --verbose"
+    "build:css": "npx postcss styles.css -o ./docs/static/tailwindcss/styles.min.css --config ./postcss.config.js --verbose --minify"
   },
   "repository": {
     "type": "git",
